[tool.poetry]
name = "nemoguardrails"
version = "0.1.0"
description = "NeMo Guardrails is an open-source toolkit for easily adding programmable guardrails to LLM-based conversational systems."
authors = ["NVIDIA"]
license = "OSI Approved :: Apache Software License"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8.1"
pydantic = "1.10.6"
aiohttp = "3.8.4"
langchain = "0.0.137"
requests = "2.28.2"
typer = "0.7.0"
pyyaml = ">=6.0,<7.0"
setuptools = ">=65.5.1,<65.6.0"
annoy = "1.17.1"
sentence-transformers = "2.2.2"
fastapi = "0.95.0"
starlette = "0.26.1"
uvicorn = "0.21.1"
httpx = "0.23.3"
simpleeval = "0.9.13"


[tool.poetry.group.dev.dependencies]
pre-commit = "3.1.1"
pylint = "2.17.0"
mypy = "1.1.1"
pytest = "7.2.2"
pytest-asyncio = "0.21.0"
black = "23.3.0"


[tool.poetry.scripts]
nemoguardrails = "nemoguardrails.__main__:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
